<resources>
    <string name="version">Version 1.16 (December 13, 2025)</string>
    <string name="author">Author: fausto.spoto@hotmoka.io</string>
    <string name="app_name">Mokito</string>
    <string name="default_server">ws://panarea.hotmoka.io:8001</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mokito</string>
    <string name="nav_header_subtitle">The Hotmoka mobile client</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_reload_state_tooltip">Reload this object from the node</string>
    <string name="action_reload_accounts_tooltip">Reload the accounts information from the node</string>
    <string name="action_reload_token_tooltip">Reload this token from the node</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_show_state">Object explorer</string>
    <string name="menu_show_manifest">Manifest</string>
    <string name="menu_settings">Settings</string>
    <string name="object_explorer">Object Explorer</string>
    <string name="token_explorer">Token Explorer</string>
    <string name="class_description">"class %1$s"</string>
    <string name="jar_description">"from jar at %1$s"</string>
    <string name="field_description">"%1$s: %2$s"</string>
    <string name="field_inherited_description">"%1$s: %2$s (inherited from %3$s)"</string>
    <string name="connected">"Connected to %1$s"</string>
    <string name="connection_failed">"Connection to %1$s failed"</string>
    <string name="state_of_object">State of Object</string>
    <string name="manifest">Manifest</string>
    <string name="show_state">Show State</string>
    <string name="settings">Settings</string>
    <string name="accounts">Accounts</string>
    <string name="new_account">New Account</string>
    <string name="storage_reference_constraints">A storage reference consists of 64 hex digits, a # and a progressive number</string>
    <string name="insert_the_storage_reference_of_the_object">Insert the storage reference of the object</string>
    <string name="insert_the_storage_reference_of_the_token">Insert the storage reference of the token</string>
    <string name="delete_confirmation_message">Do you really want to delete account %1$s? It will remain in the remote node, but this app will lose access to the account, unless you later add it again to this app by providing the mnemonic phrase of the account.</string>
    <string name="delete_key_confirmation_message">Do you really want to delete key %1$s? The associated account (if any) might remain in the remote node, but this app will lose access to it.</string>
    <string name="account_creation_message">A new account will be created, with the requested balance. Account %1$s will pay for that balance and for gas. Keep note of your new account password, since there is no way to recover it later.</string>
    <string name="payment_message">Please specify the password of the paying account %1$s, the destination of the transfer and the amount of coins to transfer. You can also click on the QR-code button to import this data via QR-code.</string>
    <string name="receive_message">Please specify the requested amount that %1$s will receive, then click on the button to generate the QR-code and show that QR-code to the payer.</string>
    <string name="payment_from_faucet_message">Please specify the destination of the transfer and the amount of coins to transfer. You can also click on the QR-code button to import this data via QR-code.</string>
    <string name="delete_account_question">Delete account?</string>
    <string name="delete_key_question">Delete key?</string>
    <string name="edit_account_question">Edit account?</string>
    <string name="edit_key_question">Edit key?</string>
    <string name="account_settings">Account settings</string>
    <string name="account_creation">Account creation</string>
    <string name="keep">Keep</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="account_name">Account name</string>
    <string name="new_account_name">New account name</string>
    <string name="new_account_balance">New account balance</string>
    <string name="new_account_password">New account password</string>
    <string name="payer_account_password">Password of %1$s</string>
    <string name="dismiss">Dismiss</string>
    <string name="warning_about_words">Please write down on paper the following mnemonic phrase of 36 words, in their sequential order. You will need them if you want to (re)install the account in this or another application. If you delete the account and lose these words, you will lose access to this account for ever!</string>
    <string name="action_import">Import account</string>
    <string name="action_import_account_tooltip">Import an account into this application</string>
    <string name="action_create_key">Create new key</string>
    <string name="action_create_key_tooltip">Create a new public key for a new account</string>
    <string name="import_account">Import Account</string>
    <string name="description_about_words_to_insert">Insert the 36 words that have been provided at time of creation of the account, in their sequential order.</string>
    <string name="operation_timed_out">The operation timed-out!</string>
    <string name="word1">word 1</string>
    <string name="word2">word 2</string>
    <string name="word3">word 3</string>
    <string name="word4">word 4</string>
    <string name="word5">word 5</string>
    <string name="word6">word 6</string>
    <string name="word7">word 7</string>
    <string name="word8">word 8</string>
    <string name="word9">word 9</string>
    <string name="word10">word 10</string>
    <string name="word11">word 11</string>
    <string name="word12">word 12</string>
    <string name="word13">word 13</string>
    <string name="word14">word 14</string>
    <string name="word15">word 15</string>
    <string name="word16">word 16</string>
    <string name="word17">word 17</string>
    <string name="word18">word 18</string>
    <string name="word19">word 19</string>
    <string name="word20">word 20</string>
    <string name="word21">word 21</string>
    <string name="word22">word 22</string>
    <string name="word23">word 23</string>
    <string name="word24">word 24</string>
    <string name="word25">word 25</string>
    <string name="word26">word 26</string>
    <string name="word27">word 27</string>
    <string name="word28">word 28</string>
    <string name="word29">word 29</string>
    <string name="word30">word 30</string>
    <string name="word31">word 31</string>
    <string name="word32">word 32</string>
    <string name="word33">word 33</string>
    <string name="word34">word 34</string>
    <string name="word35">word 35</string>
    <string name="word36">word 36</string>
    <string name="show_or_edit_account">Show or edit account</string>
    <string name="ok">OK</string>
    <string name="pay">pay</string>
    <string name="account_imported_toast">Imported account %1$s</string>
    <string name="account_created_toast">Created account %1$s</string>
    <string name="key_created_toast">Created key %1$s</string>
    <string name="account_deleted_toast">Deleted account %1$s</string>
    <string name="key_deleted_toast">Deleted key %1$s</string>
    <string name="account_replaced_toast">Edited account %1$s</string>
    <string name="key_replaced_toast">Edited key %1$s</string>
    <string name="account_not_accessible">The account is not accessible</string>
    <string name="account_password">Account password</string>
    <string name="reference_of_the_account">Reference of the account</string>
    <string name="new_key_password">New key password</string>
    <string name="description_new_key">This dialog allows you to create a new key. Once you (or somebody else) pay to that key, it will become an account, that you can control through the password specified below. Keep note of that password, since there is no way to recover it later.</string>
    <string name="waiting_for_payment_to_this_key">Waiting for payment to this key</string>
    <string name="specify_reference_instructions">If somebody has paid to this key, you can add the reference of the generated account below. This addition is automatic for anonymous payments to the key.</string>
    <string name="paying_account_password">Paying account password</string>
    <string name="destination_account_or_key">Destination account or key</string>
    <string name="anonymous_description">If you are paying to a key, you can require an anonymous transaction. It will cost up to %1$s units of gas more, but the recipient will be automatically notified of the transfer.</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="amount_to_receive">Amount to receive</string>
    <string name="pay_with">Pay with %1$s</string>
    <string name="pay_to">Pay to %1$s</string>
    <string name="anonymous">Anonymous</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="payment_completed">Payment completed</string>
    <string name="destination_syntax_error">The destination does not look like a storage reference nor like a Base58 encoded public key</string>
    <string name="destination_syntax_for_faucet_error">The destination does not look like a storage reference</string>
    <string name="send_coins">Send coins</string>
    <string name="amount_too_high">Cannot transfer more than %2$s from account %1$s</string>
    <string name="action_receive_into_key">Receive coins</string>
    <string name="action_receive_into_key_tooltip">Allows one to receive coins into this key, that will consequently become an actual account</string>
    <string name="action_show_or_edit_key">Show or edit</string>
    <string name="action_show_or_edit_key_tooltip">Allows one to see and edit the details of this key</string>
    <string name="action_delete_key">Delete</string>
    <string name="action_delete_key_tooltip">Allows one to delete this key from the list of accounts</string>
    <string name="action_receive_into_faucet">Receive coins</string>
    <string name="action_receive_into_faucet_tooltip">Allows one to transfer coins into the faucet</string>
    <string name="action_send_from_faucet">Send coins</string>
    <string name="action_send_from_faucet_tooltip">Allows one to send coins from the faucet to another account or key</string>
    <string name="action_new_account_from_faucet">Create new account</string>
    <string name="action_new_account_from_faucet_tooltip">Allows one to create a new account and let the faucet pay</string>
    <string name="action_receive_into_account">Receive coins</string>
    <string name="action_receive_into_account_tooltip">Allows one to transfer coins into this account</string>
    <string name="action_send_from_account">Send coins</string>
    <string name="action_send_from_account_tooltip">Allows one to send coins from this account to another account or key</string>
    <string name="action_new_account_from_account">Create new account</string>
    <string name="action_new_account_from_account_tooltip">Allows one to create a new account and let this account pay</string>
    <string name="action_show_or_edit_account">Show or edit</string>
    <string name="action_show_or_edit_account_tooltip">Allows one to see and edit the details of this account</string>
    <string name="action_delete_account">Delete</string>
    <string name="action_delete_account_tooltip">Allows one to delete this account from the list of accounts</string>
    <string name="menu_show_token">Token explorer</string>
</resources>