<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_reload"
        android:tooltipText="@string/action_reload_accounts_tooltip"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_key"
        android:orderInCategory="101"
        android:icon="@drawable/ic_key"
        android:title="@string/action_create_key"
        android:tooltipText="@string/action_create_key_tooltip"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:orderInCategory="102"
        android:icon="@drawable/ic_import"
        android:title="@string/action_import"
        android:tooltipText="@string/action_import_account_tooltip"
        app:showAsAction="never" />

</menu>