<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_receive_into_key"
        android:orderInCategory="100"
        android:icon="@drawable/ic_receive"
        android:title="@string/action_receive_into_key"
        android:tooltipText="@string/action_receive_into_key_tooltip"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_or_edit_key"
        android:orderInCategory="101"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_show_or_edit_key"
        android:tooltipText="@string/action_show_or_edit_key_tooltip"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_key"
        android:orderInCategory="102"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete_key"
        android:tooltipText="@string/action_delete_key_tooltip"
        app:showAsAction="never" />

</menu>