<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_accounts"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/show_manifest"
            android:icon="@drawable/ic_manifest"
            android:title="@string/menu_show_manifest" />
        <item
            android:id="@+id/insert_reference"
            android:icon="@drawable/ic_state"
            android:title="@string/menu_show_state" />
        <item
            android:id="@+id/insert_token"
            android:icon="@drawable/ic_state"
            android:title="@string/menu_show_token" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>