<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_accounts">

    <fragment
        android:id="@+id/nav_accounts"
        android:name="io.hotmoka.android.mokito.view.home.HomeFragment"
        android:label="@string/menu_accounts"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/insert_reference"
        android:name="io.hotmoka.android.mokito.view.InsertReferenceFragment"
        android:label="@string/object_explorer"
        tools:layout="@layout/fragment_insert_reference" >
        <action
            android:id="@+id/action_insert_reference_to_show_state"
            app:destination="@id/show_state" />
    </fragment>

    <fragment
        android:id="@+id/show_state"
        android:name="io.hotmoka.android.mokito.view.ShowStateFragment"
        android:label="@string/state_of_object" >
        <argument
            android:name="reference"
            app:argType="string"
            android:defaultValue="" />
        <action
            android:id="@+id/action_show_state_self"
            app:destination="@id/show_state" />
    </fragment>

    <fragment
        android:id="@+id/show_manifest"
        android:name="io.hotmoka.android.mokito.view.ShowManifestFragment"
        android:label="@string/manifest">
        <action
            android:id="@+id/action_show_state_self"
            app:destination="@id/show_state" />
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="io.hotmoka.android.mokito.view.SettingsFragment"
        android:label="@string/settings" />

</navigation>